# mefai-backtest

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: simple_backtest.py  walk_forward.py
src/mefai_backtest/: __init__.py  engine.py  stats.py  types.py  walk_forward.py
tests/: test_engine.py
