[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mefai-backtest"
version = "0.1.0"
description = "Production grade vectorized backtesting engine for crypto trading"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "MEFAI Dev", email = "dev@mefai.io" }
]
keywords = ["backtesting", "crypto", "trading", "quantitative-finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "structlog>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/mefai-dev/mefai-backtest"
Repository = "https://github.com/mefai-dev/mefai-backtest"
Issues = "https://github.com/mefai-dev/mefai-backtest/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mefai_backtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
